--- a/static/style.css
+++ b/static/style.css
@@ -1079,7 +1079,8 @@ table tr.highlight {
 
   .nav.mobile-menu-open {
     max-height: 500px;
-    padding-top: 10px;
+    padding-top: 15px;
+    padding-bottom: 10px;
   }
   
   .nav a,
@@ -1196,7 +1197,7 @@ table tr.highlight {
   }
   
   .content {
-    margin-top: 160px;
+    margin-top: 70px;
   }
   
   .stat-value {
