--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -26,7 +26,7 @@
               <span class="badge badge-inactive">Inactive</span>
             {% endif %}
           {% else %}
-            <span class="incomplete-name">{{ user.netid }}</span>
+            <span class="incomplete-name">Incomplete Profile</span>
             {% if current_admin %}
               <span class="badge badge-inactive">Inactive</span>
             {% endif %}
