--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -4,7 +4,8 @@
 <div class="page-container">
   <h2>ELO Leaderboard</h2>
   
-  <table class="leaderboard-table full">
+  <div class="table-container">
+    <table class="leaderboard-table full">
     <thead>
       <tr>
         <th>Rank</th>
@@ -40,6 +41,7 @@
       {% endfor %}
     </tbody>
   </table>
+  </div>
 </div>
 {% endblock %}
 
