--- a/static/style.css
+++ b/static/style.css
@@ -1297,8 +1297,9 @@ table tr.highlight {
   }
   
   .card .table-container {
-    margin-left: -15px;
-    margin-right: -15px;
+    margin-left: 0;
+    margin-right: 0;
+    border-radius: 0;
   }
   
   .dashboard-grid {
@@ -1392,8 +1393,8 @@ table tr.highlight {
   }
   
   .card .table-container {
-    margin-left: -25px;
-    margin-right: -25px;
+    margin-left: 0;
+    margin-right: 0;
     border-radius: 0;
   }
   
