--- a/static/style.css
+++ b/static/style.css
@@ -18,6 +18,9 @@ body {
   background-color: #f5f5f5;
   color: #333;
   overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 
 a {
